//使用proto3语法
syntax = "proto3";

//不要拆分成多个类
option java_multiple_files = false;
//生成java类所在的包
option java_package = "org.example.vcdb.store.proto";
//生成外层类的类名
option java_outer_classname = "Table";

import "Version.proto";

package Table;

// 对外提供的接口
service tableService {
  // getRegionMeta 方法名，google.protobuf.Empt 传入参数为空， regionMeta  返回响应类
  rpc createTable (createRequest) returns (Version.intReply) {}

  rpc alterTable (alterRequest) returns (Version.intReply) {}

  rpc deleteTable (deleteRequest) returns (Version.intReply) {}

}

message createRequest{
  string dBName=10;
  string tabName=20;
  bytes column_family=30;
}



message alterRequest{
  string dBName=10;
  string tabName=20;
  bytes alter_cells=30;
}





message deleteRequest{
  string dBName=10;
  string tabName=20;
}



